# CI-0129

./: .gitmodules  familia_kilman.pl
Cruzando_El_Rio/: rio.sh
Cruzando_El_Rio/src/: cruzandoRio.cpp
Entregable-CruzandoRio-Luis_Carlos_Quesada/CruzandoElRio/: CMakeLists.txt
Entregable-CruzandoRio-Luis_Carlos_Quesada/CruzandoElRio/include/: a_star.h
LuiskBot/: LuiskBot.fsproj  Program.fs
Prolog/: Restaurante.pl  familia_kilman.pl
RioC++/RioC++/RioC++/: cruzandoRio.cpp
Wolfram_Automata/src/: Automaton.js  Grid.js  index.html
elRio/: CMakeLists.txt  rio.sh
elRio/src/: 8_puzzle.cpp  cruzandoRio.cpp  grafo.cpp
